--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "react-bootstrap": "^2.0.3",
         "react-dom": "^17.0.2",
         "react-router-dom": "5",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^5.0.1",
         "react-scroll": "^1.8.4",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
