--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
     
     # 4. Build the React app
     - name: Build React app
-      run: npm run build
+      run: CI=false npm run build
     
     # 5. Verify build output exists
     - name: Verify build output
