--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@azure/functions": "^4.0.0",
-    "@azure/data-tables": "^13.0.0"
+    "@azure/cosmos": "^4.0.0"
   },
   "devDependencies": {}
 }
