--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,41 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
+# Dependencies
+node_modules/
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
+# Production build
 /build
 
-# misc
-.DS_Store
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
 # Terraform
 **/.terraform/*
-*.tfstate
-*.tfstate.*
-*.tfstate.backup
+*.tfstate*
 .terraform.lock.hcl
 
-# Documentation (personal notes)
-PROJECT_OVERVIEW*.md
-LOOM_SCRIPT*.md
+# Azure Functions
+api/node_modules/
+api/dist/
+local.settings.json
+LOOM_SCRIPT_EN.md
+LOOM_SCRIPT_JP.md
+PROJECT_OVERVIEW_JP.md
+PROJECT_OVERVIEW.md
