Remove unused visitor counter functionality and fix workflow for weather-widget branch

--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -4,10 +4,12 @@ on:
   push:
     branches:
       - feature/azure-functions-backend
+      - feature/weather-widget
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - feature/azure-functions-backend
+      - feature/weather-widget
 
 jobs:
   build_and_deploy_job:
