--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,61 +1,41 @@
-name: Build and Deploy to Azure Storage
+name: Deploy to Azure Static Web Apps
 
 on:
   push:
     branches: [ main, master ]
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches: [ main, master ]
 
 jobs:
-  build-and-deploy:
+  build_and_deploy_job:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    
+    name: Build and Deploy Job
     steps:
-    # 1. Checkout code
-    - name: Checkout repository
-      uses: actions/checkout@v3
-    
-    # 2. Setup Node.js with proper version
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
-        cache: 'npm'
-    
-    # 3. INSTALL DEPENDENCIES 
-    - name: Install dependencies
-      run: npm ci
-    
-    # 4. Build the React app
-    - name: Build React app
-      run: CI=false npm run build
-    
-    # 5. Verify build output exists
-    - name: Verify build output
-      run: |
-        echo "Checking build folder..."
-        if [ ! -d "./build" ]; then
-          echo "❌ ERROR: build folder not found!"
-          echo "Current directory contents:"
-          ls -la
-          exit 1
-        fi
-        echo "✅ Build folder found"
-        echo "Build files:"
-        ls -la ./build/
-    
-    # 6. Upload to Azure Storage
-    - name: Deploy to Azure Blob Storage
-      uses: azure/CLI@v1
-      with:
-        azcliversion: latest
-        inlineScript: |
-          echo "Starting upload to Azure Storage..."
-          
-          az storage blob upload-batch \
-            --account-name "${{ secrets.AZURE_STORAGE_ACCOUNT }}" \
-            --auth-mode key \
-            --account-key "${{ secrets.AZURE_STORAGE_KEY }}" \
-            --destination "\$web" \
-            --source ./build \
-            --overwrite
-          
-          echo "Upload completed successfully!"
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+      - name: Build And Deploy
+        id: builddeploy
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: "upload"
+          app_location: "/" # App source code path
+          api_location: "api" # Api source code path - optional
+          output_location: "build" # Built app content directory - optional
+          app_build_command: "CI=false npm run build"
+
+  close_pull_request_job:
+    if: github.event_name == 'pull_request' && github.event.action == 'closed'
+    runs-on: ubuntu-latest
+    name: Close Pull Request Job
+    steps:
+      - name: Close Pull Request
+        id: closepullrequest
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          action: "close"
