--- a/api/package.json
+++ b/api/package.json
@@ -2,13 +2,13 @@
   "name": "resume-api",
   "version": "1.0.0",
   "description": "Azure Functions API for resume website",
-  "scripts": {
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
+  "main": "index.js",
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "@azure/cosmos": "^4.0.0",
     "@azure/functions": "^4.0.0",
-    "node-fetch": "^3.3.2"
+    "@azure/cosmos": "^4.0.0",
+    "node-fetch": "^3.3.0"
   }
 }
